# datamuse-cli

./: .gitignore  README.md  pyproject.toml
datamuse_cli/: __init__.py  cli.py
