[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datamuse-cli"
version = "0.1.0"
description = "Command line interface for the Datamuse API"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = ["datamuse", "cli", "words", "thesaurus", "dictionary"]
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "requests>=2.25.0",
    "haggis>=0.10.0"
]

[project.scripts]
datamuse = "datamuse_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["datamuse_cli"]
